; ModuleID = '/home/carl/AnghaBench/libgit2/src/win32/extr_posix_w32.c_symlink.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/win32/extr_posix_w32.c_symlink.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MAX_PATH = common dso_local global i32 0, align 4
@SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE = common dso_local global i32 0, align 4
@SYMBOLIC_LINK_FLAG_DIRECTORY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @p_symlink(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %9 = load i32, i32* %7, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = call i64 @git_win32_path_from_utf8(i32 %9, i8* %10)
  %12 = icmp slt i64 %11, 0
  br i1 %12, label %19, label %13

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  %15 = load i32, i32* @MAX_PATH, align 4
  %16 = load i8*, i8** %4, align 8
  %17 = call i64 @git__utf8_to_16(i32 %14, i32 %15, i8* %16)
  %18 = icmp slt i64 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %13, %2
  store i32 -1, i32* %3, align 4
  br label %38

20:                                               ; preds = %13
  %21 = load i32, i32* @SYMBOLIC_LINK_FLAG_ALLOW_UNPRIVILEGED_CREATE, align 4
  store i32 %21, i32* %8, align 4
  %22 = load i8*, i8** %4, align 8
  %23 = load i8*, i8** %5, align 8
  %24 = call i64 @target_is_dir(i8* %22, i8* %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %20
  %27 = load i32, i32* @SYMBOLIC_LINK_FLAG_DIRECTORY, align 4
  %28 = load i32, i32* %8, align 4
  %29 = or i32 %28, %27
  store i32 %29, i32* %8, align 4
  br label %30

30:                                               ; preds = %26, %20
  %31 = load i32, i32* %7, align 4
  %32 = load i32, i32* %6, align 4
  %33 = load i32, i32* %8, align 4
  %34 = call i32 @CreateSymbolicLinkW(i32 %31, i32 %32, i32 %33)
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %37, label %36

36:                                               ; preds = %30
  store i32 -1, i32* %3, align 4
  br label %38

37:                                               ; preds = %30
  store i32 0, i32* %3, align 4
  br label %38

38:                                               ; preds = %37, %36, %19
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i64 @git_win32_path_from_utf8(i32, i8*) #1

declare dso_local i64 @git__utf8_to_16(i32, i32, i8*) #1

declare dso_local i64 @target_is_dir(i8*, i8*) #1

declare dso_local i32 @CreateSymbolicLinkW(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
